# incidents

./: .gitignore  README.md  loader_incidents.py  pyproject.toml  receiver_incidents.py
conf/: query_time.txt
handler/: __init__.py  summarizer.py
handler/propmts/: human_prompt.txt  system_prompt.txt
loader/: __init__.py  soap_client.py
loader/utils/: __init__.py  models.py
queue/: __init__.py  azure_queue_receiver.py  azure_queue_sender.py
tests/: test_azure_queue_receiver.py  test_azure_queue_sender.py  test_receiver_incidents.py  test_soap_client.py  test_summarizer.py
